2006-04-05  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/ComponentSampleModel.java: Added API docs all over.

2006-04-04  Tom Tromey  <tromey@redhat.com>

	* java/net/MimeTypeMapper.java (MimeTypeMapper): Fixed indices.

2006-04-04  Tom Tromey  <tromey@redhat.com>

	* java/net/MimeTypeMapper.java (mime_types): No longer static.
	(MimeTypeMapper): Initialize.
	(fillFromFile): New method.
	(main): New method.
	(mime_strings): Updated.

2006-04-04  Tom Tromey  <tromey@redhat.com>

	* lib/gen-classlist.sh.in: Correct handle generated files.

2006-04-04  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/regexp/CharIndexed.java(setAnchor): New method.
	* gnu/regexp/CharIndexedInputStream.java(setAnchor): New method.
	* gnu/regexp/CharIndexedCharSequence.java: New file.
	* gnu/regexp/CharIndexedCharArray.java: Rewritten as an extention of
	gnu.regexp.CharIndexedCharSequence.
	* gnu/regexp/CharIndexedString.java: Likewise.
	* gnu/regexp/CharIndexedStringBuffer.java: Likewise.
	* gnu/regexp/RE.java(makeCharIndexed): Make a new CharIndexed
	using CharIndexedCharSequence. Use setAnchor when the input
	object is already a CharIndexed.
	* java/util/regex/Matcher.java(inputCharIndexed): New field
	to be used as a parameter of the RE#getMatch.

2006-04-04  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/SampleModel.java: Reformatted.

2006-04-04  David Gilbert  <david.gilbert@object-refinery.com>

	* java/awt/image/ComponentSampleModel.java
	(ComponentSampleModel(int, int, int, int, int[])): Added API 
	documentation,
	(ComponentSampleModel(int, int, int, int, int[], int[]): Throw 
	IllegalArgumentException for DataBuffer.TYPE_UNDEFINED, take copies
	of the bandOffsets and bankIndices arguments, added API documentation,
	* java/awt/image/SampleModel.java
	(SampleModel(int, int, int, int): Throw IllegalArgumentException for
	unrecognised dataTypes, w * h exceeds Integer.MAX_VALUE, and numBands